--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container d-flex justify-content-center text-center">
             &copy; 2025 - Sophie, Julia & Daniel - <a asp-area="" asp-page="/omos">Om Os</a>
         </div>
     </footer>
