--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -68,7 +68,11 @@ button.accept-policy {
 .footer {
     position: fixed;
     bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
+    text-align: center;
     white-space: nowrap;
     line-height: 60px;
 }
+
