--- a/Pages/FranzBeckerlee.cshtml
+++ b/Pages/FranzBeckerlee.cshtml
@@ -16,7 +16,11 @@
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #CC5500;
-            -- color: #f4f4f4;
+            background-image: url('pictures/goldenpicture.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             margin: 70px;
             padding: 15px;
             display: fixed;
