--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -20,7 +20,11 @@
             body {
                 font-family: 'Poppins', sans-serif;
                 background-color: #CC5500;
-                -- color: #f4f4f4;
+                background-image: url('pictures/goldenpicture.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
                 margin: 70px;
                 padding:15px;
                 display: fixed;
@@ -28,6 +32,9 @@
                 align-items: center;
                 height: 110vh;
                 overflow-x: auto;
+
+                }
+         
 
         .container {
             width: 80%;
@@ -127,12 +134,10 @@
 
     <div class="container">
 
-        <h1>Gasolins Historie</h1>
-
         </section>
 
             <section class="picture" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                <img src="~/pictures/Fællesbillede1.png" alt="Fællesbillede" width="900">
+                <img src="~/pictures/Gasolinshistorie.png" alt="Fællesbillede" width="900">
             </section>
 
 
@@ -143,6 +148,7 @@
                     <div class="event-description">
                             Gasolin' var en dansk rockgruppe dannet i 1969 af Franz Beckerlee
                             (f. 1942), guitar, Wili Jønsson (f. 1942), bas, keyboard, sang, Kim Larsen, guitar, sang, og Bjørn Uglebjerg (1948-1994), trommer.
+          
                     </div>
                 </div>
             </div>
@@ -152,6 +158,7 @@
                     <div class="event-title">1970 - Til Thy-lejeren </div>
                     <div class="event-description">
                             Tog Gasolin til Thy-lejren, hvor de optrådte sammen med andre bands som Gnags og Blue Sun.
+
                         </div>
                 </div>
             </div>
@@ -226,6 +233,13 @@
                             Gasolin opløste sig som band, efter at have udgivet flere succesfulde albums. 
                             Efter opløsningen gik medlemmerne hver til sit og fortsatte med solokarrierer. 
                             Kim Larsen opnåede stor succes som solomusiker og blev en af Danmarks mest elskede kunstnere.
+                            <section>
+                            <video autoplay width="500" height="250" controls>
+                                <source src="~/videos/GasolinVideo1.mp4" type="video/mp4">
+                                Din browser understøtter ikke videoafspilning.
+                            </video>
+                            </section>
+
                     </div>
                 </div>
             </div>
