--- a/Pages/KimLarsen.cshtml
+++ b/Pages/KimLarsen.cshtml
@@ -16,9 +16,13 @@
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #CC5500;
-            -- color: #f4f4f4;
+            background-image: url('pictures/goldenpicture.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             margin: 70px;
-            padding:15px;
+            padding: 15px;
             display: fixed;
             justify-content: center;
             align-items: center;
@@ -112,7 +116,7 @@
             </video>
         </section>
             <section class="tekstbillede">
-                <h2>Gik bort i ... </h2>
+                <h2>Gik bort i 2018. Kim Larsen døde af kræft, nærmere bestemt lungekræft.  </h2>
 
             <section class="picture" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                 <img src="~/pictures/Kimlarsen.jpg" alt="Kim Larsen" width="300">
