--- a/Pages/BjornUglebjerg.cshtml
+++ b/Pages/BjornUglebjerg.cshtml
@@ -16,7 +16,11 @@
         body {
             font-family: 'Poppins', sans-serif;
             background-color: #CC5500;
-            -- color: #f4f4f4;
+            background-image: url('pictures/goldenpicture.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             margin: 70px;
             padding: 15px;
             display: fixed;
@@ -99,17 +103,18 @@
 
             <p>
                 Bjørn Uglebjerg valgte at forlade Gasolin i 1971,
-                for at tilbringe mere tid med Susanne Mertz. Han blev derfor i 1971 udskiftet med søren berlev
-                og Bjørn Uglebjerg medvirkede senere hen som trommeslager og percussionist på Skousen & Ingemanns.
+                for at tilbringe mere tid med Susanne Mertz. Han blev derfor i 1971 udskiftet med Søren Berlev, 
+               som medvirkede senere hen som trommeslager og percussionist på Skousen & Ingemanns.
+                
             </p>
 
 
             <section class="tekstbillede">
-                <h2>Gik bort i 1994 </h2>
+                <h2>Gik bort i 1994. Ifølge tilgængelige kilder skyldtes hans død kræft i bugspytkirtlen. </h2>
 
         </section>
           <section class="picture" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-            <img src="~/pictures/Bjørnuglebjerg4.png" alt="Bjørn Uglebjerg" width="300">
+            <img src="~/pictures/BjørnUglebjerg5.png" alt="Bjørn Uglebjerg" width="300">
         </section>
         
 
