--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: transparent !important;">
+
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Ragnarock og Gasolin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -35,6 +36,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/BjornUglebjerg">Bjorn Uglebjerg</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/SørenBerlev">Søren Berlev</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/omos">Om Os</a>
                         </li>
                     </ul>
@@ -48,7 +52,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="footer text-muted">
         <div class="container d-flex justify-content-center text-center">
             &copy; 2025 - Sophie, Julia & Daniel -  <a asp-area="" asp-page="/omos"> Om Os</a>
         </div>
