--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.navbar {
+    background-color: transparent !important; /* Gør navbaren gennemsigtig */
+    box-shadow: none !important; /* Fjern eventuelle skygger */
+}
+
+footer {
+    margin-top: 20px; /* Hvis du vil have lidt afstand til indholdet */
+}
