--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -42,6 +42,11 @@
             padding: 10px;
             border-radius: 10px;
             background: #FFFFFF;
+                background-image: url('pictures/sorthvid.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
@@ -99,7 +104,7 @@
         
         .event-description {
             font-size: 16px;
-            color: #b0b0b0;
+                color: #FFFFFF;
         }
 
         .event-date {
