--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light" style="background-color: transparent !important;">
 
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Ragnarock og Gasolin</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index" style="color: red;">Ragnarock og Gasolin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,25 +21,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/Index">Hjem</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/KimLarsen">Kim Larsen</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/KimLarsen">Kim Larsen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/FranzBeckerlee">Franz Berckerlee</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/FranzBeckerlee">Franz Berckerlee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/WillieJonsson">Willie Jonsson</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/WillieJonsson">Willie Jonsson</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BjornUglebjerg">Bjorn Uglebjerg</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/BjornUglebjerg">Bjorn Uglebjerg</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/SørenBerlev">Søren Berlev</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/SørenBerlev">Søren Berlev</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/omos">Om Os</a>
+                            <a class="nav-link text-light" asp-area="" asp-page="/omos">Om Os</a>
                         </li>
                     </ul>
                 </div>
