--- a/Pages/SørenBerlev.cshtml
+++ b/Pages/SørenBerlev.cshtml
@@ -30,17 +30,23 @@
             overflow-x: auto;
         }
 
-        .container {
+     .container {
             width: 80%;
-            margin: 0 auto;
+            margin: 0px auto ;
             padding: 10px;
             border-radius: 10px;
-            background: #FFFFFF;
+            background:  #FFFFFF;
+                background-image: url('pictures/sorthvid.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+        }10px rgba(0, 0, 0, 0.5);
         }
 
         h1, h2 {
-            text-align: center;
+             text-align: center;
             color: #f7d200;
         }
 
@@ -53,8 +59,8 @@
 
         .bio p {
             font-size: 16px;
-            color: #b0b0b0;
-            text-align: justify;
+            color: #FFFFFF;
+            text-align: center;
             margin-bottom: 20px;
         }
 
@@ -72,7 +78,7 @@
 
             .songs ul li {
                 font-size: 16px;
-                color: #b0b0b0;
+                color: #FFFFFF;
                 margin: 10px 0;
             }
 
