--- a/Pages/omos.cshtml
+++ b/Pages/omos.cshtml
@@ -37,8 +37,14 @@
         padding: 10px;
         border-radius: 10px;
         background: #FFFFFF;
+        background-image: url('pictures/sorthvid.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
         box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
     }
+
 
 
 
@@ -75,7 +81,7 @@
              <p>
                 Læs mere om Ragnarock på: 
             </p>
-            <a href="https://museumragnarock.dk/" target="_blank">https://wwww.museumragnarock.dk</a>
+            <a href="https://museumragnarock.dk/" target="_blank" style="color: white;">https://www.museumragnarock.dk</a>
 
         </div>
     </section>
