--- a/Pages/FranzBeckerlee.cshtml
+++ b/Pages/FranzBeckerlee.cshtml
@@ -32,10 +32,15 @@
 
         .container {
             width: 80%;
-            margin: 0 auto;
+            margin: 0px auto;
             padding: 10px;
             border-radius: 10px;
             background: #FFFFFF;
+            background-image: url('pictures/sorthvid.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
@@ -53,7 +58,7 @@
 
         .bio p {
             font-size: 16px;
-            color: #b0b0b0;
+            color: #FFFFFF;
             text-align: justify;
             margin-bottom: 20px;
         }
@@ -72,7 +77,7 @@
 
             .songs ul li {
                 font-size: 16px;
-                color: #b0b0b0;
+                color: #FFFFFF;
                 margin: 10px 0;
             }
 
