--- a/Pages/KimLarsen.cshtml
+++ b/Pages/KimLarsen.cshtml
@@ -32,10 +32,15 @@
 
         .container {
             width: 80%;
-            margin: 0 auto;
+            margin: 0px auto;
             padding: 10px;
             border-radius: 10px;
             background: #FFFFFF;
+            background-image: url('pictures/sorthvid.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
@@ -53,7 +58,7 @@
 
         .bio p {
             font-size: 16px;
-            color: #b0b0b0;
+            color: #FFFFFF;
             text-align: justify;
             margin-bottom: 20px;
         }
@@ -72,7 +77,7 @@
 
             .songs ul li {
                 font-size: 16px;
-                color: #b0b0b0;
+                color: #FFFFFF;
                 margin: 10px 0;
             }
 
@@ -91,7 +96,7 @@
    
 
             <section class="picture" style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                <img src="~/pictures/Kimlarsen.jpg" alt="Kim Larsen" width="300">
+                <img src="~/pictures/Kimlarsen2.png" alt="Kim Larsen" width="300">
            
         <section class="bio">
                 <h2>En musikalsk legende fra Danmark </h2>
@@ -109,7 +114,7 @@
         </section>
 
         <section class="video-section">
-            <h2>Kim Larsen Live Performance</h2>
+            <h2>Kender du Lim Karsen?</h2>
             <video autoplay controls>
                 <source src="~/videos/Kim Larsen.mp4" type="video/mp4">
                 Din browser understøtter ikke videoafspilning.
